--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -19,7 +19,7 @@
 
     <div class="form-group">
         <label>Select City</label>
-        <select class="form-control">
+        <select class="form-control" >
             <option value="">--Select CIty--</option>
           <option *ngFor="let city of cityInfo; let k = index" value="{{k}}">{{city}}</option>
         </select>  
@@ -27,9 +27,8 @@
 
 </div>        
 <div class="col-lg-6">
-    <agm-map [latitude]="latitude" [longitude]="longitude" [zoom]="zoom">
-        <agm-marker [latitude]="latitude" [longitude]="longitude" [city]="city">
-            <agm-info-window>Hey I am here</agm-info-window>
+    <agm-map [latitude]="latitude" [longitude]="longitude" [zoom]="zoom" [scrollwheel]="false">
+        <agm-marker [latitude]="latitude" [longitude]="longitude">
         </agm-marker>
     </agm-map>
 </div>
